--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 
-server.port=82
+server.port=86
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/qrdb
@@ -11,7 +11,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
 
 
-bot.token=2118151584:AAEqDzaZpr1zqYN0QBn2eRlUIygWPWDteDc
-bot.username=asakabank_qr_bot
-#bot.chatid=-551572680
+bot.token=2144269403:AAHZFf4GH4Bc6az9NFhGLMr_6AC-iUODxh0
+bot.username=orville_services_bot
+#bot.chatid=-625809215
+bot.chatid=-708672653
 #bot.botchatid=2009941656
